--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend Mentor | Order summary card</title>
+    <link rel="stylesheet" href="index.css" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Red+Hat+Display:ital,wght@0,900;1,500;1,900&display=swap");
     </style>
