--- a/index.html
+++ b/index.html
@@ -11,19 +11,18 @@
   </head>
   <body>
     <main>
-      <div class="image-div">
-        <img
-          src="images/illustration-hero.svg"
-          alt="illustration of a girl listening to music"
-        />
-      </div>
-      <div>
+        <div class="main-info">
+      <img
+        src="images/illustration-hero.svg"
+        alt="illustration of a girl listening to music"
+      />
         <h1 class="card-title">Order Summary</h1>
         <p class="card-info">
           You can now listen to millions of songs, <br />
           audiobooks, and podcasts on any device <br />
           anywhere you like!
         </p>
+        </div>
         <img src="images/icon-music.svg" alt="icon music" />
         <div class="order-container">Annual Plan $59.99/year <a>Change</a></div>
         <button>Change Proceed to Payment</button>
