--- a/index.html
+++ b/index.html
@@ -5,29 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend Mentor | Order summary card</title>
     <link rel="stylesheet" href="index.css" />
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Red+Hat+Display:ital,wght@0,900;1,500;1,900&display=swap");
-    </style>
   </head>
   <body>
     <main>
-        <div class="main-info">
-      <img
-        src="images/illustration-hero.svg"
-        alt="illustration of a girl listening to music"
-      />
-        <h1 class="card-title">Order Summary</h1>
-        <p class="card-info">
-          You can now listen to millions of songs, <br />
-          audiobooks, and podcasts on any device <br />
-          anywhere you like!
-        </p>
+      <div class="wrapper_image">
+        <div class="summary_card">
+          <div class="main_image">
+            <img
+              src="images/illustration-hero.svg"
+              alt="illustration of a girl listening to music"
+            />
+          </div>
+          <h1 class="card-title">Order Summary</h1>
+          <p class="card-info">
+            You can now listen to millions of songs, <br />
+            audiobooks, and podcasts on any device <br />
+            anywhere you like!
+          </p>
+          <div class="order_container">
+            <div class="second_image">
+              <img
+                src="/images/icon-music.svg"
+                class="music_icon"
+                alt="music icon"
+              />
+            </div>
+            <h2 class="plan_title">Annual Plan</h2>
+            <p class="plan_info">$59.99/year</p>
+            <button class="change_order" src="#">Change</button>
+          </div>
+          <button class="btn_1">Change Proceed to Payment</button>
+          <br />
+          <button class="cancel_order" src="#">Cancel Order</button>
         </div>
-        <img src="images/icon-music.svg" alt="icon music" />
-        <div class="order-container">Annual Plan $59.99/year <a>Change</a></div>
-        <button>Change Proceed to Payment</button>
-        <br />
-        <button>Cancel Order</button>
       </div>
     </main>
     <br />
@@ -35,7 +45,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by
+      >. <img src="/images/favicon-32x32.png" alt="frontend logo" />Coded by
       <a href="https://www.frontendmentor.io/profile/purplehippo911">foxynoxy</a
       >.
     </footer>
