--- a/index.html
+++ b/index.html
@@ -23,21 +23,17 @@
             anywhere you like!
           </p>
           <div class="order_container">
-            <div class="second_image">
               <img
                 src="/images/icon-music.svg"
                 class="music_icon"
                 alt="music icon"
               />
-            </div>
             <h2 class="plan_title">Annual Plan</h2>
             <p class="plan_info">$59.99/year</p>
-            <button class="change_order" src="#">Change</button>
-          </div>
-          <button class="btn_1">Change Proceed to Payment</button>
+            <button class="change_order" src="#">Change</button> </div>
+          <button class="btn_1">Proceed to Payment</button>
           <br />
           <button class="cancel_order" src="#">Cancel Order</button>
-        </div>
       </div>
     </main>
     <br />
