--- a/index.html
+++ b/index.html
@@ -8,32 +8,34 @@
   </head>
   <body>
     <main>
-      <div class="wrapper_image">
-        <div class="summary_card">
-          <div class="main_image">
-            <img
-              src="images/illustration-hero.svg"
-              alt="illustration of a girl listening to music"
-            />
+      <div class="summary_card">
+        <div class="main_image">
+          <img
+            src="images/illustration-hero.svg"
+            alt="illustration of a girl listening to music"
+          />
+        </div>
+        <h1 class="card-title">Order Summary</h1>
+        <p class="card-info">
+          You can now listen to millions of songs, <br />
+          audiobooks, and podcasts on any device <br />
+          anywhere you like!
+        </p>
+        <div class="order_container">
+          <img
+            src="/images/icon-music.svg"
+            class="music_icon"
+            alt="music icon"
+          />
+          <div class="plan_info">
+            <span class="plan_title">Annual Plan</span>
+            <p>$59.99/year</p>
           </div>
-          <h1 class="card-title">Order Summary</h1>
-          <p class="card-info">
-            You can now listen to millions of songs, <br />
-            audiobooks, and podcasts on any device <br />
-            anywhere you like!
-          </p>
-          <div class="order_container">
-              <img
-                src="/images/icon-music.svg"
-                class="music_icon"
-                alt="music icon"
-              />
-            <h2 class="plan_title">Annual Plan</h2>
-            <p class="plan_info">$59.99/year</p>
-            <button class="change_order" src="#">Change</button> </div>
-          <button class="btn_1">Proceed to Payment</button>
-          <br />
-          <button class="cancel_order" src="#">Cancel Order</button>
+          <button class="change_order" src="#">Change</button>
+        </div>
+        <button class="btn_1">Proceed to Payment</button>
+        <br />
+        <button class="cancel_order" src="#">Cancel Order</button>
       </div>
     </main>
     <br />
