--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             alt="illustration of a girl listening to music"
           />
         </div>
-        <h1 class="card-title">Order Summary</h1>
-        <p class="card-info">
+        <h1 class="card_title">Order Summary</h1>
+        <p class="card_info">
           You can now listen to millions of songs, <br />
           audiobooks, and podcasts on any device <br />
           anywhere you like!
@@ -33,7 +33,7 @@
           </div>
           <button class="change_order" src="#">Change</button>
         </div>
-        <button class="btn_1">Proceed to Payment</button>
+        <button class="btn_1" src="#">Proceed to Payment</button>
         <br />
         <button class="cancel_order" src="#">Cancel Order</button>
       </div>
