--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend Mentor | Order summary card</title>
-    	<link rel="icon" type="image/png" href="images/favicon.png">
+    	<link rel="icon" type="image/png" href="/images/favicon-32x32.png">
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
