--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </p>
         <div class="order_container">
           <img
-            src="/images/icon-music.svg"
+            src="images/icon-music.svg"
             class="music_icon"
             alt="music icon"
           />
@@ -44,7 +44,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. <img src="/images/favicon-32x32.png" alt="frontend logo" />Coded by
+      >. <img src="images/favicon-32x32.png" alt="frontend logo" />Coded by
       <a href="https://www.frontendmentor.io/profile/purplehippo911">foxynoxy</a
       >.
     </footer>
