--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend Mentor | Order summary card</title>
-    	<link rel="icon" type="image/png" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" href="images/favicon-32x32.png" />
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
@@ -39,14 +39,5 @@
         <button class="cancel_order" src="#">Cancel Order</button>
       </div>
     </main>
-    <br />
-    <footer>
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. <img src="images/favicon-32x32.png" alt="frontend logo" />Coded by
-      <a href="https://www.frontendmentor.io/profile/purplehippo911">foxynoxy</a
-      >.
-    </footer>
   </body>
 </html>
