--- a/index.html
+++ b/index.html
@@ -5,39 +5,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend Mentor | Order summary card</title>
     <link rel="icon" type="image/png" href="images/favicon-32x32.png" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="/index.css" />
   </head>
   <body>
-    <main>
-      <div class="summary_card">
-        <div class="main_image">
-          <img
-            src="images/illustration-hero.svg"
-            alt="illustration of a girl listening to music"
-          />
-        </div>
-        <h1 class="card_title">Order Summary</h1>
-        <p class="card_info">
-          You can now listen to millions of songs, <br />
-          audiobooks, and podcasts on any device <br />
-          anywhere you like!
+    <div class="card">
+      <div class="container row">
+        <img
+          src="images/illustration-hero.svg"
+          alt="illustration of a girl listening to music"
+        />
+        <h1 class="card__title">Order Summary</h1>
+        <p class="card__info">
+          You can now listen to millions of songs, audiobooks, and podcasts on
+          any device anywhere you like!
         </p>
-        <div class="order_container">
-          <img
-            src="images/icon-music.svg"
-            class="music_icon"
-            alt="music icon"
-          />
-          <div class="plan_info">
-            <span class="plan_title">Annual Plan</span>
-            <p>$59.99/year</p>
+        <div class="order-container">
+          <div class="grid">
+            <img src="images/icon-music.svg" alt="music icon" />
+            <div class="order__info">
+              <span class="order__title">Annual Plan</span>
+              <p class="order__price">$59.99/year</p>
+            </div>
+            <button class="order__button" src="#">Change</button>
           </div>
-          <button class="change_order" src="#">Change</button>
         </div>
         <button class="btn_1" src="#">Proceed to Payment</button>
-        <br />
         <button class="cancel_order" src="#">Cancel Order</button>
       </div>
-    </main>
+    </div>
   </body>
+  <!-- <main>
+    <div class="summary_card">
+      <div class="main_image">
+        <img
+          src="images/illustration-hero.svg"
+          alt="illustration of a girl listening to music"
+        />
+      </div>
+      <h1 class="card_title">Order Summary</h1>
+      <p class="card_info">
+        You can now listen to millions of songs, <br />
+        audiobooks, and podcasts on any device <br />
+        anywhere you like!
+      </p>
+      <div class="order_container">
+        <img
+          src="images/icon-music.svg"
+          class="music_icon"
+          alt="music icon"
+        />
+        <div class="plan_info">
+          <span class="plan_title">Annual Plan</span>
+          <p>$59.99/year</p>
+        </div>
+        <button class="change_order" src="#">Change</button>
+      </div>
+      <button class="btn_1" src="#">Proceed to Payment</button>
+      <br />
+      <button class="cancel_order" src="#">Cancel Order</button>
+    </div>
+  </main> -->
 </html>
